# doculook

./: .dockerignore  .gitignore  Dockerfile  README.md  README_CN.md  docker-compose.yaml  doculook.json  mkdocs.yml  pyproject.toml  server.py
doculook/backend/pipeline/: batch_analyze.py  model_json_to_middle_json.py  para_split.py  pipeline_analyze.py  pipeline_magic_model.py  pipeline_middle_json_mkcontent.py
doculook/backend/vlm/: __init__.py  vision_predictor.py
doculook/cli/: client.py  common.py  fast_api.py  gradio_app.py  models_download.py  server.py
doculook/model/ocr/paddleocr2pytorch/: pytorch_paddle.py
doculook/model/table/: rapid_table.py
doculook/utils/: __init__.py  block_pre_proc.py  block_sort.py  config_reader.py  excel_direct_processor.py  excel_handler.py  image_rotation_utils.py  llm_aided.py  magic_model_utils.py  model_utils.py  models_download_utils.py  office_converter.py  pdf_image_tools.py  ppt_direct_processor.py  ppt_handler.py  span_block_fix.py  span_pre_proc.py  word_direct_processor.py  word_handler.py
